// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#333333",
      "fontSize": 17,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders large correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#333333",
      "fontSize": 28,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders medium correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#333333",
      "fontSize": 17,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders muted correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#999999",
      "fontSize": 17,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders small correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#333333",
      "fontSize": 13,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders xlarge correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#333333",
      "fontSize": 34,
    }
  }
>
  Text
</Text>
`;
